<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".activities.AuthActivity">

    <ImageView
        android:id="@+id/bg_auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.95"
        android:background="@drawable/background1"
        android:backgroundTint="@color/background"
        android:backgroundTintMode="multiply"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <View
        android:id="@+id/frame_auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="50dp"
        android:alpha="0.55"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/background"
        tools:cardCornerRadius="50" />

    <ImageView
        android:id="@+id/ic_key"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/frame_auth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_key" />

    <TextView
        android:id="@+id/welcome_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ic_key"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/emilys_candy"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/welcome"
        android:letterSpacing="0.1"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/welcome_auth"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:fontFamily="@font/emilys_candy"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:letterSpacing="0.1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/pass_login_auth"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/user_login_auth"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:fontFamily="@font/emilys_candy"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:letterSpacing="0.2"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/forget_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_login_auth"
        android:layout_alignStart="@+id/frame_auth"
        android:layout_marginStart="220dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/emilys_candy"
        android:text="@string/forget"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/btn_register_auth"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_auth"
        android:layout_alignStart="@+id/frame_auth"
        android:layout_alignBottom="@+id/frame_auth"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_register" />

    <ImageButton
        android:id="@+id/btn_login_auth"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/forget_auth"
        android:layout_alignEnd="@+id/frame_auth"
        android:layout_alignBottom="@+id/frame_auth"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_login" />

</RelativeLayout>